# 828i_f20

./: .gitignore  CIFAR-10 Example.ipynb  Cleverhans FGSM Example.ipynb  README.md  pyproject.toml
imagenet-5k/: label_text.txt  labels.txt
models/: alexnet.py  train_alexnet_cifar.py
notebooks/: Cleverhans FGSM Example.ipynb  MNIST AE Plots (WIP).ipynb  MobileNetV2 on ImageNet.ipynb  iterative-resnet.ipynb  iterative-vgg16.ipynb
src/: attack.py  dct.py  models.py  obfuscation.py  perturbation.py  plot.py  test.py  util.py  utils.py
